syntax = "proto3";

package randomizer;

// 定义服务
service RandomizerService {
  // 一元接口，返回一个随机字符串
  rpc GetRandomString(Empty) returns (RandomStringResponse);

  // 流接口，持续返回随机UUID
  rpc GetRandomUUIDStream(Empty) returns (stream RandomUUIDResponse);

  // 获取单个640x512的数组
  rpc GetArray(Empty) returns (ArrayResponse);

  // 获取640x512的数组流
  rpc GetArrayStream(Empty) returns (stream ArrayResponse);

  // 获取二维数组
  rpc Get2DArray(Empty) returns (NumberArray2D);
  
  // 获取二维数组流
  rpc Get2DArrayStream(Empty) returns (stream NumberArray2D);
}

// 空请求
message Empty {}

// 随机字符串响应
message RandomStringResponse {
  string value = 1;
}

// 随机UUID响应
message RandomUUIDResponse {
  string uuid = 1;
}


// 数组响应消息
message ArrayResponse {
  repeated float row = 1; // 存储数组的一行，640个float
}

message NumberArray2D {
  repeated NumberArray matrix = 1; // Each row is an array of numbers
}

message NumberArray {
  repeated float values = 1; // 1D array of numbers
}


